--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,5 @@
 -r requirements.txt
-pytest==3.2.3
-tox==2.9.1
-twine==1.12.1
-wheel==0.32.1
+pytest~=3.2.3
+tox~=2.9.1
+twine~=1.12.1
+wheel~=0.32.1
